[gd_scene load_steps=4 format=3 uid="uid://q8ngb5dfyrsh"]

[ext_resource type="Texture2D" uid="uid://c4kede5uto25n" path="res://assets/Textures/Items/Weapons/sword.png" id="1_3iax0"]
[ext_resource type="Script" uid="uid://iykvk5d2hita" path="res://scripts/item_option.gd" id="1_175qx"]
[ext_resource type="FontFile" uid="uid://tpecxstuxs41" path="res://assets/Font/tenderness.otf" id="2_175qx"]

[node name="ItemOption" type="ColorRect"]
custom_minimum_size = Vector2(180, 50)
offset_right = 180.0
offset_bottom = 50.0
color = Color(0.547633, 0.547633, 0.547633, 1)
script = ExtResource("1_175qx")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 26.0
offset_bottom = 26.0
color = Color(0, 0, 0, 1)

[node name="ItemIcon" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_3iax0")

[node name="LabelName" type="Label" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 2.0
offset_right = 120.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("2_175qx")
text = "Name"

[node name="LabelDescription" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 28.0
offset_right = 178.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("2_175qx")
theme_override_font_sizes/font_size = 8
text = "Description of Item"
autowrap_mode = 2

[node name="LabelLevel" type="Label" parent="."]
layout_mode = 0
offset_left = 130.0
offset_top = 2.0
offset_right = 170.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("2_175qx")
theme_override_font_sizes/font_size = 12
text = "level:1"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
